tests/block_level_fun/block_level_fun.exp
Error ----------------------------------------------------------------------------------------------------- test.js:4:18

Cannot resolve name `f`. [cannot-resolve-name]

   4| module.exports = f;
                       ^



Found 1 error
